v0.11.1/_sources/generated/statsmodels.tsa.statespace.varmax.VARMAXResults.rst.txt
statsmodels.tsa.statespace.varmax.VARMAXResults
===============================================

.. currentmodule:: statsmodels.tsa.statespace.varmax

.. autoclass:: VARMAXResults
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~VARMAXResults.append
      ~VARMAXResults.apply
      ~VARMAXResults.conf_int
      ~VARMAXResults.cov_params
      ~VARMAXResults.extend
      ~VARMAXResults.f_test
      ~VARMAXResults.forecast
      ~VARMAXResults.get_forecast
      ~VARMAXResults.get_prediction
      ~VARMAXResults.impulse_responses
      ~VARMAXResults.info_criteria
      ~VARMAXResults.initialize
      ~VARMAXResults.load
      ~VARMAXResults.normalized_cov_params
      ~VARMAXResults.plot_diagnostics
      ~VARMAXResults.predict
      ~VARMAXResults.remove_data
      ~VARMAXResults.save
      ~VARMAXResults.simulate
      ~VARMAXResults.summary
      ~VARMAXResults.t_test
      ~VARMAXResults.t_test_pairwise
      ~VARMAXResults.test_heteroskedasticity
      ~VARMAXResults.test_normality
      ~VARMAXResults.test_serial_correlation
      ~VARMAXResults.wald_test
      ~VARMAXResults.wald_test_terms
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~VARMAXResults.aic
      ~VARMAXResults.aicc
      ~VARMAXResults.bic
      ~VARMAXResults.bse
      ~VARMAXResults.cov_params_approx
      ~VARMAXResults.cov_params_oim
      ~VARMAXResults.cov_params_opg
      ~VARMAXResults.cov_params_robust
      ~VARMAXResults.cov_params_robust_approx
      ~VARMAXResults.cov_params_robust_oim
      ~VARMAXResults.fittedvalues
      ~VARMAXResults.hqic
      ~VARMAXResults.llf
      ~VARMAXResults.llf_obs
      ~VARMAXResults.loglikelihood_burn
      ~VARMAXResults.mae
      ~VARMAXResults.mse
      ~VARMAXResults.pvalues
      ~VARMAXResults.resid
      ~VARMAXResults.sse
      ~VARMAXResults.states
      ~VARMAXResults.tvalues
      ~VARMAXResults.use_t
      ~VARMAXResults.zvalues
   
   
   